home page updated

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ margin-bottom: 1000px;
   font-size: 12px;
   font-size: 0.8rem;  
   letter-spacing: 2px;  
-  cursor: pointer;
+  cursor: pointer;livetext
 }
 
 .btn + .btn {
@@ -436,11 +436,14 @@ margin-bottom: 1000px;
 @media (max-width:800px) {
   .livecontainer{
     width: 400px;
+
   }
   
   .banner-image {
     width: 300px;
+    height: 400px;
   }
+  
 }
    </style>
 
@@ -464,8 +467,10 @@ margin-bottom: 1000px;
 
           <div class="livetext">
              <h1> Cognition 2.0</h1>
-            <p>Lorem ipsum dolor sit amet, <br/>
-              consectetur adipiscing elit.</p>
+            <p>Cognition 2.0 Web Development Bootcamp, organized by the Microsoft Technical Community,
+                The 2-month bootcamp covered frontend (HTML, CSS, JS, React.js) and backend (Node.js, Express.js)
+                 technologies, along with hands-on projects and expert mentorship.
+                </p>
            </div>
            </div>
            <div class="button-wrapper"> 
@@ -892,7 +897,7 @@ margin-bottom: 1000px;
               position: relative;
               width: 300px;
               height: 400px;
-              display: flex;
+              display: flex; 
               justify-content: center;
               align-items: center;
            
@@ -900,7 +905,7 @@ margin-bottom: 1000px;
 
 
             .contentbox .popcontent p {
-           font-size: 18px;
+           font-size: 16px;
            margin-left: 300px;
             }
 
@@ -959,7 +964,7 @@ margin-bottom: 1000px;
     width: 300px;
     height: auto;
     flex-direction: column;
-    margin-top: 100px;
+    margin-top: 200px;
     position: relative;
   }
 
@@ -1024,7 +1029,13 @@ margin-bottom: 1000px;
       <h1><b>Registrations Open</b></h1>
       </div>
       <div class="conttxt">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, vel architecto repudiandae unde assumenda ipsam error praesentium minus sapiente temporibus? Sequi, tempore ex! Maxime fuga libero repellendus, quam quaerat nulla deleniti, ut, aperiam eius ullam mollitia labore. Laudantium aut adipisci optio fugiat laborum sint numquam consequatur dolor itaque, reiciendis repellat?</p>
+      <p>We are excited to announce the launch of our exclusive membership registration for the 
+        Microsoft Technical Community (MTC). As a member, you'll gain access to enriching workshops,
+         discounted rates for events, and internships through our collaboration with Zuno by Foundit and Wayspire. 
+         Get recognized with an official MTC ID and participate in exclusive events with renowned IT companies 
+         like Coding Ninjas and Wayspire.<br><br>
+         <b>Don't miss out—register now and embark on an exciting 
+          journey of growth and learning.</b></p>
         </div>
       <div class="poplink">
       <a href="#"> Join Us !!! </a>
