website is completed

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ margin-bottom: 1000px;
 
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+            <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
             <li><a class="nav-link scrollto" href="#services">Sponsors</a></li>
             <li><a class="nav-link scrollto" href="Team.html">Team</a></li>
             <li>
@@ -228,7 +228,7 @@ margin-bottom: 1000px;
         <!-- .navbar -->
         <!-- <button class="sweet-alert-test buy-tickets">Register</button> -->
         <button class="sweet-alert-test buy-tickets">
-          <a  href="register.html"></a>Register
+          <a  href="registration-drive.html"></a>Register
         </button>
         <!-- <a href="https://forms.gle/5GGc9YbWCowd6aQZ7" target="_blank">  <button class="buy-tickets"> Register </button></a> -->
       </div>
@@ -249,7 +249,7 @@ margin-bottom: 1000px;
           class="glightbox play-btn mb-4"
         ></a>
         <a href="#about" class="about-btn scrollto">About MTC</a>
-        <a href="AiMl.html" class="about-btn scrollto">AIML BootCamp</a>
+        <a href="registration-drive.html" class="about-btn scrollto">Join Us!!!</a>
      <!--<a href="Cyberevent.html" class="about-btn scrollto">Tech Fuse : CyberSecurity</a> -->
 
         <!-- <a href="protocode.html" class="about-btn">Protocode</a> -->
@@ -390,7 +390,7 @@ margin-bottom: 1000px;
   font-size: 12px;
   font-size: 0.8rem;  
   letter-spacing: 2px;  
-  cursor: pointer;livetext
+  cursor: pointer;
 }
 
 .btn + .btn {
@@ -435,13 +435,14 @@ margin-bottom: 1000px;
 
 @media (max-width:800px) {
   .livecontainer{
-    width: 400px;
-
+    width: 330px;
+    height: 1000px;
   }
   
   .banner-image {
     width: 300px;
     height: 400px;
+    margin-left: -25px;
   }
   
 }
@@ -1032,13 +1033,14 @@ margin-bottom: 1000px;
       <p>We are excited to announce the launch of our exclusive membership registration for the 
         Microsoft Technical Community (MTC). As a member, you'll gain access to enriching workshops,
          discounted rates for events, and internships through our collaboration with Zuno by Foundit and Wayspire. 
-         Get recognized with an official MTC ID and participate in exclusive events with renowned IT companies 
+     
+Get recognized with an official MTC ID and participate in exclusive events with renowned IT companies 
          like Coding Ninjas and Wayspire.<br><br>
          <b>Don't miss out—register now and embark on an exciting 
           journey of growth and learning.</b></p>
         </div>
       <div class="poplink">
-      <a href="#"> Join Us !!! </a>
+      <a href="registration-drive.html"> Join Us !!! </a>
     </div>
     </div>
     </div>
