--- a/registration-drive.html
+++ b/registration-drive.html
@@ -57,7 +57,7 @@
 
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+            <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
             <li><a class="nav-link scrollto" href="#services">Sponsors</a></li>
             <li><a class="nav-link scrollto" href="Team.html">Team</a></li>
             <li>
