--- a/main/index.html
+++ b/main/index.html
@@ -787,33 +787,33 @@ margin-bottom: 1000px;
        </div>
    </div>
 </div>
-<div class="inde">
+<!-- <div class="inde">
    <div class="cardsp">
      <div class="contentsp front">
          <img src="assets/img/Sponsors/5.jpg" alt="">
      </div>
      <div class="contentsp back">
          <h2>Inde Campus</h2>
-        <!-- <h3>Full Stack Developer</h3>-->
+        <!-- <h3>Full Stack Developer</h3>
          <p>IndeCampus aims to transform the student boarding infrastructure in India by utilizing advanced technology to create safe and compliant properties with excellent space designs, proximity to institutions, and global standards of recreation. Their objective is to provide a premium, scalable, and sustainable residential experience for students.</p>
         
      </div>
  </div>
- </div>
+ </div> -->
 
- <div class="create">
+ <!-- <div class="create">
  <div class="cardsp">
    <div class="contentsp front">
        <img src="assets/img/Sponsors/6.jpg" alt="">
    </div>
    <div class="contentspback">
        <h2>Creatappa</h2>
-      <!-- <h3>Full Stack Developer</h3>-->
+      <!-- <h3>Full Stack Developer</h3>
        <p>Creatappa Enterprises LLP is an Indian E-commerce company based out of Dehradun that specializes in Printing-related 
         services and products, which include apparel, 
         electronic accessories, Branding and promotional material.</p>
    </div>
-</div>
+</div> -->
 
 
 </center>
@@ -1033,7 +1033,7 @@ margin-bottom: 1000px;
 }
           </style>
  
-<div class="popup">
+<!-- <div class="popup">
   <div class="contentbox">
     <div class="close">
       <img src="assets/img/cross.png" width="50px">
@@ -1062,7 +1062,7 @@ Get recognized with an official MTC ID and participate in exclusive events with 
     </div>
     </div>
   </div>
-</div>
+</div> -->
 
     </section>
 
