--- a/main/registration-drive.html
+++ b/main/registration-drive.html
@@ -72,10 +72,10 @@
         </nav>
         <!-- .navbar -->
         <!-- <button class="sweet-alert-test buy-tickets">Register</button> -->
-        <button class="sweet-alert-test buy-tickets">
+        <!-- <button class="sweet-alert-test buy-tickets">
           <a href="register.html"></a>Register
-        </button>
-        <!-- <a href="https://forms.gle/5GGc9YbWCowd6aQZ7" target="_blank">  <button class="buy-tickets"> Register </button></a> -->
+        </button> -->
+        <a href="https://forms.gle/5GGc9YbWCowd6aQZ7" target="_blank">  <button class="buy-tickets"> Register </button></a>
       </div>
     </header>
 
@@ -99,7 +99,54 @@
     </div>
 
     <!-- Landing Page End -->
-
+    <div class="registrationPhotos">
+      <div class="carousel-section">
+        <!-- <img
+          src="./assets/css/registration-drive/assets/arrow-prev-small-svgrepo-com.svg"
+          alt=""
+          class="left"
+          id="left"
+        /> -->
+        <div class="wrapper-carousel">
+          <ul class="carousel-perks">
+            <li class="perk-card">
+              <div class="img">
+                <img
+                  src="./assets/img/WhatsApp Image 2023-07-20 at 11.24.59 AM.jpeg"
+                  alt="img"
+                  draggable="false"
+                />
+              </div>
+            </li>
+            <li class="perk-card">
+              <div class="img">
+                <img
+                  src="./assets/img/WhatsApp Image 2023-07-20 at 11.25.00 AM.jpeg"
+                  alt="img"
+                  draggable="false"
+                />
+              </div>
+            </li>
+            <li class="perk-card">
+              <div class="img">
+                <img
+                  src="./assets/img/WhatsApp Image 2023-07-20 at 11.25.00 AM (1).jpeg"
+                  alt="img"
+                  draggable="false"
+                />
+              </div>
+            </li>
+          </ul>
+              <!-- <img
+            src="./assets/css/registration-drive/assets/arrow-prev-small-svgrepo-com (1).svg"
+            alt=""
+            class="right"
+            id="right"
+          /> -->
+          
+          </div>
+      </div>
+    </div>
     <!-- Perks Page Start -->
 
     <div class="perks">
