--- a/main/index.html
+++ b/main/index.html
@@ -1082,7 +1082,7 @@ margin-bottom: 1000px;
   
       <!-- Template Main JS File -->
       <script src="assets/js/main.js"></script>
-      <script>
+      <!-- <script>
         document
           .querySelector(".sweet-alert-test")
           .addEventListener("click", success);
@@ -1108,6 +1108,6 @@ margin-bottom: 1000px;
         close.addEventListener('click', () => {
           popup.style.display = "none";
         })
-      </script>
+      </script> -->
   </body>
 </html>
