--- a/Team.html
+++ b/Team.html
@@ -855,22 +855,23 @@
             </div>
           </div>
 
+     
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img
-                src="assets/img/team/final/Kartikeyaaa.jpeg"
+                src="assets/img/team/final/shreshth.jpg"
                 alt="Speaker 6"
                 class="img-fluid"
                 style="height: 350px; width: 350px"
               />
               <div class="details">
                 <h3>
-                  <a href="#" target="_blank">Kartikeya Rai </a>
+                  <a href="#" target="_blank"> Shresth Pandey</a>
                 </h3>
-                <p>Internal PR : Head</p>
+                <p>Sponsor & Public Relation : Head</p>
                 <div class="social">
                   <a
-                    href="https://www.linkedin.com/in/kartikey-rai-89b9791a5"
+                    href=" https://www.linkedin.com/in/shresth-pandey-488b10229/"
                     target="_blank"
                     ><i class="bi bi-linkedin"></i
                   ></a>
@@ -882,18 +883,18 @@
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img
-                src="assets/img/team/final/NAMNEET (3).jpeg"
+                src="assets/img/team/final/shrey2.jpeg"
                 alt="Speaker 6"
                 class="img-fluid"
                 style="height: 350px; width: 350px"
               />
               <div class="details">
                 <h3>
-                  <a href="#" target="_blank">Namneet Kaur</a>
+                  <a href="#" target="_blank">Shrey Sharma</a>
                 </h3>
-                <p>Internal PR : Associate</p>
+                <p> Public Relations : Associate</p>
                 <div class="social">
-                  <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/shrey-sharma-34237024b" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -911,7 +912,7 @@
                 <h3>
                   <a href="#" target="_blank">Chaitanya Jain </a>
                 </h3>
-                <p>Internal PR : Associate</p>
+                <p>Public Relations : Associate</p>
                 <div class="social">
                   <a
                     href="https://www.linkedin.com/in/chetanya-jain-838016210"
@@ -923,29 +924,6 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img
-                src="assets/img/team/final/shreshth.jpg"
-                alt="Speaker 6"
-                class="img-fluid"
-                style="height: 350px; width: 350px"
-              />
-              <div class="details">
-                <h3>
-                  <a href="#" target="_blank"> Shresth Pandey</a>
-                </h3>
-                <p>Sponsor : Head</p>
-                <div class="social">
-                  <a
-                    href=" https://www.linkedin.com/in/shresth-pandey-488b10229/"
-                    target="_blank"
-                    ><i class="bi bi-linkedin"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-          </div>
 
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
@@ -1142,7 +1120,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img
-                src="assets/img/team/final/Ananya.jpg"
+                src="assets/img/team/final/Ananyasinghimage.jpg"
                 alt="Speaker 6"
                 class="img-fluid"
                 style="height: 350px; width: 350px"
@@ -1163,6 +1141,51 @@
             </div>
           </div>
 
+
+
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="300">
+              <img
+                src="assets/img/team/final/sonali2.jpeg"
+                alt="Speaker 6"
+                class="img-fluid"
+                style="height: 350px; width: 350px"
+              />
+              <div class="details">
+                <h3>
+                  <a href="#" target="_blank">Sonali Bhadra</a>
+                </h3>
+                <p>Associate Design Head</p>
+                <div class="social">
+                  <a href="https://www.linkedin.com/in/sonali-bhadra-12086a249" target="_blank"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="300">
+              <img
+                src="assets/img/team/final/vedanshi.jpeg"
+                alt="Speaker 6"
+                class="img-fluid"
+                style="height: 350px; width: 350px"
+              />
+              <div class="details">
+                <h3>
+                  <a href="#" target="_blank">Vedanshi Samant </a>
+                </h3>
+                <p>Associate Design Head</p>
+                <div class="social">
+                  <a href="https://www.linkedin.com/in/vedanshi-samant-709879278" target="_blank"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+ 
+
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img
@@ -1182,6 +1205,7 @@
               </div>
             </div>
           </div>
+
 
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
