--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ margin-bottom: 1000px;
                 /></a>
               </div>
    
-         
+          <!--div.code-->
 
 
               <div class="swiper-slide">
