--- a/registration-drive.html
+++ b/registration-drive.html
@@ -54,7 +54,7 @@
         <div id="logo" class="me-auto">
           <!-- Uncomment below if you prefer to use a text logo -->
           <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
-          <a href="#hero" class="scrollto"
+          <a href="index.html" class="scrollto"
             ><img src="assets/img/logo_dark.png" alt="" title=""
           /></a>
         </div>
@@ -284,12 +284,13 @@
         <p>Uniting Talent, Fueling Innovation</p>
 
         <div class="sponsors">
-          <div class="holders">
+   <!--       <div class="holders">
             <img
               src="./assets/css/registration-drive/assets/microsoft.jpg"
               alt=""
             />
-          </div>
+          </div>-->
+          
           <div class="holders">
             <img src="./assets/css/registration-drive/assets/zuno.png" alt="" />
           </div>
