--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ margin-top: 100px;
           class="glightbox play-btn mb-4"
         ></a>
         <a href="#about" class="about-btn scrollto">About MTC</a>
+        <a href="registration-drive.html" class="about-btn scrollto">Join Us </a>
      <!--   <a href="registration-drive.html" class="about-btn scrollto">Join Us!!!</a>-->
      <!--<a href="Cyberevent.html" class="about-btn scrollto">Tech Fuse : CyberSecurity</a> -->
 
