--- a/index.html
+++ b/index.html
@@ -426,6 +426,14 @@ margin-top: 100px;
                 /></a>
               </div>
               <div class="swiper-slide">
+                <a href="Simulacrum.html"
+                  ><img
+                    src="assets/img/gallery/mtc simmi.png"
+                    class="img-fluid"
+                    alt=""
+                /></a>
+              </div>
+              <div class="swiper-slide">
                 <a href="CodiVent.html"
                   ><img
                     src="assets/img/gallery/CodiEvent.png"
