--- a/Simulacrum.html
+++ b/Simulacrum.html
@@ -237,7 +237,10 @@
     </style>
 
     <div class="btn">
-      <button>Register now</button>
+      <a href="https://forms.gle/oP49ySShnztMqiYg7" target="_blank">
+
+        <button href="https://forms.gle/oP49ySShnztMqiYg7" >Register now</button>
+      </a>
     </div>
 
   </main><!-- End #main -->
