--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ margin-top: 100px;
         <!-- .navbar -->
         <!-- <button class="sweet-alert-test buy-tickets">Register</button> -->
         <button class="sweet-alert-test buy-tickets">
-          <a  href="./Simulacrum.html">SIMULACRUM</a>
+          <a  href="./Simulacrum.html">Register</a>
         </button>
         <!-- <a href="https://forms.gle/5GGc9YbWCowd6aQZ7" target="_blank">  <button class="buy-tickets"> Register </button></a> -->
       </div>
