--- a/Simulacrum.html
+++ b/Simulacrum.html
@@ -43,12 +43,12 @@
       <div id="logo" class="me-auto">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
-        <a href="index.html #hero" class="scrollto"><img src="assets/img/logo_dark.png" alt="" title=""></a>
+        <a href="./index.html" class="scrollto"><img src="assets/img/logo_dark.png" alt="" title=""></a>
       </div>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto " href="index.html #hero">Home</a></li>
+          <li><a class="nav-link scrollto " href="./index.html">Home</a></li>
       <li><a class="nav-link scrollto" href="index.html #services">Sponsors</a></li>
           <li><a class="nav-link scrollto" href="Team.html">Team</a></li>
           <li><a class="nav-link scrollto" href="Gallery.html">Gallery</a></li>
@@ -57,7 +57,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <button class="sweet-alert-test buy-tickets"> Register </button>
+     
 	  <!-- <a href="https://forms.gle/xHUcbk6ncXbyoogt8" target="_blank">  <button class="buy-tickets"> Register </button></a> -->
 
     </div>
